human-intervention-logs/jakarta.enterprise:jakarta.enterprise.cdi-api:3.0.0/gradle-test/gradle-test-2026-05-07T08-37-21-823368Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: jakarta.enterprise:jakarta.enterprise.cdi-api:3.0.0
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6215-bb0392a6/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6215-bb0392a6/tests/src/jakarta.enterprise/jakarta.enterprise.cdi-api/3.0.0/src/test/java/jakarta_enterprise/jakarta_enterprise_cdi_api/SecurityActionsTest.java:13: error: package javax.enterprise.util does not exist
import javax.enterprise.util.AnnotationLiteral;
                            ^
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6215-bb0392a6/tests/src/jakarta.enterprise/jakarta.enterprise.cdi-api/3.0.0/src/test/java/jakarta_enterprise/jakarta_enterprise_cdi_api/SecurityActionsTest.java:88: error: cannot find symbol
    private static final class NamedQualifierLiteral extends AnnotationLiteral<NamedQualifier>
                                                             ^
  symbol:   class AnnotationLiteral
  location: class SecurityActionsTest
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6215-bb0392a6/tests/src/jakarta.enterprise/jakarta.enterprise.cdi-api/3.0.0/src/test/java/jakarta_enterprise/jakarta_enterprise_cdi_api/SecurityActionsTest.java:88: error: NamedQualifierLiteral is not abstract and does not override abstract method annotationType() in Annotation
    private static final class NamedQualifierLiteral extends AnnotationLiteral<NamedQualifier>
                         ^
3 errors

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6215-bb0392a6/tests/src/jakarta.enterprise/jakarta.enterprise.cdi-api/3.0.0/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6215-bb0392a6/tests/src/jakarta.enterprise/jakarta.enterprise.cdi-api/3.0.0/src/test/java/jakarta_enterprise/jakarta_enterprise_cdi_api/SecurityActionsTest.java:88: error: NamedQualifierLiteral is not abstract and does not override abstract method annotationType() in Annotation
      private static final class NamedQualifierLiteral extends AnnotationLiteral<NamedQualifier>
                           ^
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6215-bb0392a6/tests/src/jakarta.enterprise/jakarta.enterprise.cdi-api/3.0.0/src/test/java/jakarta_enterprise/jakarta_enterprise_cdi_api/SecurityActionsTest.java:88: error: cannot find symbol
      private static final class NamedQualifierLiteral extends AnnotationLiteral<NamedQualifier>
                                                               ^
    symbol:   class AnnotationLiteral
    location: class SecurityActionsTest
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6215-bb0392a6/tests/src/jakarta.enterprise/jakarta.enterprise.cdi-api/3.0.0/src/test/java/jakarta_enterprise/jakarta_enterprise_cdi_api/SecurityActionsTest.java:13: error: package javax.enterprise.util does not exist
  import javax.enterprise.util.AnnotationLiteral;
                              ^
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 18s
14 actionable tasks: 6 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6215-bb0392a6/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for jakarta.enterprise:jakarta.enterprise.cdi-api:3.0.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 21s
9 actionable tasks: 1 executed, 8 up-to-date
